--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -28,3 +28,10 @@ body {
     justify-content: center;
     padding: 10px;
 }
+
+.londrina-sketch-regular {
+    font-family: "Londrina Sketch", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
